// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateForm should correctly validate the addresses 1`] = `
Object {
  "addresses": Array [
    Object {
      "city": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerCity"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
      "neighborhood": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerNeighborhood"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
      "state": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerState"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
      "street_number": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerNumber"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
      "zipcode": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerZipCode"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
    },
    Object {
      "city": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerCity"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
      "neighborhood": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerNeighborhood"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
      "state": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerState"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
      "street_name": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerAddress"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
      "street_number": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerNumber"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
      "zipcode": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerZipCode"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
    },
    null,
  ],
}
`;

exports[`validateForm should correctly validate the phones 1`] = `
Object {
  "phones": Array [
    Object {
      "phone": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerPhone"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
    },
    Object {
      "phone": Array [
        <FormattedMessage
          id="required"
          values={
                    Object {
                              "field": <FormattedMessage
                                id="formCustomerPhone"
                                values={Object {}}
                    />,
                            }
          }
/>,
      ],
    },
    null,
  ],
}
`;

exports[`validateForm should return the correct error messages 1`] = `
Object {
  "birthday": Array [
    <FormattedMessage
      id="required"
      values={
            Object {
                  "field": <FormattedMessage
                    id="formCustomerBirthDate"
                    values={Object {}}
            />,
                }
      }
/>,
  ],
  "gender": Array [
    <FormattedMessage
      id="required"
      values={
            Object {
                  "field": <FormattedMessage
                    id="formCustomerGender"
                    values={Object {}}
            />,
                }
      }
/>,
  ],
  "name": Array [
    <FormattedMessage
      id="required"
      values={
            Object {
                  "field": <FormattedMessage
                    id="formCustomerFullName"
                    values={Object {}}
            />,
                }
      }
/>,
  ],
}
`;
